OAK-10146: consolidate usage of java 9/10 immutable data structures